--- a/1811063611_NguyenHoangVinh_BigSchool/1811063611_NguyenHoangVinh_BigSchool.csproj
+++ b/1811063611_NguyenHoangVinh_BigSchool/1811063611_NguyenHoangVinh_BigSchool.csproj
@@ -212,9 +212,9 @@
     <Compile Include="Migrations\202107041450302_AddAttendance.Designer.cs">
       <DependentUpon>202107041450302_AddAttendance.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202107070358044_AddFollowingsTable.cs" />
-    <Compile Include="Migrations\202107070358044_AddFollowingsTable.Designer.cs">
-      <DependentUpon>202107070358044_AddFollowingsTable.cs</DependentUpon>
+    <Compile Include="Migrations\202107071623471_AddFollowingsTable.cs" />
+    <Compile Include="Migrations\202107071623471_AddFollowingsTable.Designer.cs">
+      <DependentUpon>202107071623471_AddFollowingsTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -289,6 +289,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Attending.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -324,8 +325,8 @@
     <EmbeddedResource Include="Migrations\202107041450302_AddAttendance.resx">
       <DependentUpon>202107041450302_AddAttendance.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202107070358044_AddFollowingsTable.resx">
-      <DependentUpon>202107070358044_AddFollowingsTable.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202107071623471_AddFollowingsTable.resx">
+      <DependentUpon>202107071623471_AddFollowingsTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
