--- a/1811063611_NguyenHoangVinh_BigSchool/1811063611_NguyenHoangVinh_BigSchool.csproj
+++ b/1811063611_NguyenHoangVinh_BigSchool/1811063611_NguyenHoangVinh_BigSchool.csproj
@@ -203,6 +203,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\API\CoursesController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\FollowingsController.cs" />
@@ -238,6 +239,10 @@
     <Compile Include="Migrations\202107071623471_AddFollowingsTable.Designer.cs">
       <DependentUpon>202107071623471_AddFollowingsTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107121659401_AddIsCanceledColumnToCourse.cs" />
+    <Compile Include="Migrations\202107121659401_AddIsCanceledColumnToCourse.Designer.cs">
+      <DependentUpon>202107121659401_AddIsCanceledColumnToCourse.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -263,6 +268,12 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootbox.all.js" />
+    <Content Include="Scripts\bootbox.all.min.js" />
+    <Content Include="Scripts\bootbox.js" />
+    <Content Include="Scripts\bootbox.locales.js" />
+    <Content Include="Scripts\bootbox.locales.min.js" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -350,6 +361,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107071623471_AddFollowingsTable.resx">
       <DependentUpon>202107071623471_AddFollowingsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107121659401_AddIsCanceledColumnToCourse.resx">
+      <DependentUpon>202107121659401_AddIsCanceledColumnToCourse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
